Fix ? controls button default browser appearance on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -413,6 +413,8 @@ html, body {
 .transport-controls-link {
   display: block;
   width: 100%;
+  -webkit-appearance: none;
+  appearance: none;
   background: none;
   border: none;
   text-align: center;
